<resources>
    <string name="app_name">WithoutNet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="nodes_fragment_label">Nodes Fragment</string>
    <string name="networks_fragment_label">Networks Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="debug_fragment_label">Debug Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="not_available">N/A</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continue_as_a_regular_user">Continue as a regular user</string>
    <string name="withoutnet">WithoutNet</string>

    <string name="available_nodes">Available nodes:</string>

    <string name="Scan_for_nearby_nodes">Scan for nearby nodes (debug)</string>
    <string name="see_cached_updates">See cached updates</string>

    <string name="start_test_service">Start test service</string>
    <string name="stop_test_service">Stop test service</string>

    <string name="start_participating">Start participating</string>
    <string name="stop_participating">Stop participating</string>

    <string name="not_participating">Not participating</string>
    <string name="participating">Participating</string>

    <string name="press_to_start_participating">Press the button to start participating</string>
    <string name="press_to_stop_participating">Press the button to stop participating</string>

    <string name="search">Search</string>
    <string name="search_for_a_network_to_view_it">Search for a network to view it</string>
    <string name="create_new_network">Create a new network</string>
    <string name="network_name">Network name</string>
    <string name="create_network">Create network</string>
    <string name="no_nodes_in_network">No nodes in network</string>
    <string name="delete_network">Delete this network</string>
    <string name="add_a_node">Add a node</string>

    <string name="delete_network_warning_message">Are you sure you want to delete this network</string>

    <string name="search_for_a_node_to_add_it">Search for a node to add it</string>
    <string name="no_nodes_found">No nodes found</string>

    <string name="search_for_a_node_to_view_it">Search for a node to view it</string>
    <string name="create_a_new_node">Create a new node</string>
    <string name="node_name">Node name</string>
    <string name="create_node">Create node</string>

    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="network">Network</string>
    <string name="no_network">No network</string>
    <string name="delete_node">Delete Node</string>
    <string name="delete_node_warning_message">Are you sure you want to delete this node?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletion_success_message">Successfully deleted </string>
    <string name="deletion_failure_message">Failed to delete </string>

    <string name="change_nodes">Change Node\'s</string>
    <string name="change_nodes_name">Change node\'s name</string>
    <string name="change_nodes_network">Change node\'s network</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new">Enter new</string>
    <string name="submit">Submit</string>
    <string name="no_network_found">No network found</string>
    <string name="search_for_a_network_to_add_it">Search for a network to add it</string>

    <string name="upload_updates">Upload updates</string>
    <string name="download_updates">Download updates</string>

    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="read_update">Read update</string>

    <string name="the_update_read_will_appear_here">The update read will appear here</string>

    <string name="battery_reading">Battery Reading</string>
    <string name="unknown_type">Unknown Type</string>

    <string name="timestamp">Timestamp</string>
    <string name="node_id">Node ID</string>
    <string name="common_name">Common Name</string>
    <string name="reading_type">Reading Type</string>
    <string name="reading_value">Reading Value</string>

    <string name="withoutnet_participation_enabled">WithoutNet participation enabled</string>
    <string name="withoutnet_is_scanning_for_and_connecting_to_nodes">WithoutNet is scanning for and connecting to nodes</string>


    <string name="server_url">Server URL</string>
    <string name="node_scanning_interval">Node Scanning Interval</string>
    <string name="message_transmission_to_server_interval">Message Transmission to Server Interval</string>
    <string name="maximum_number_of_messages_in_cache">Maximum Number of Messages in Cache</string>

    <string name="ms">ms</string>

    <string name="change">Change</string>

    <string name="delete_all_messages_in_database">Delete all messages in the database</string>
    <string name="delete_all_messages_in_server">Delete all messages in the server</string>

    <string name="all_messages_in_database">all messages in the database</string>
    <string name="all_messages_in_server">all messages in the server</string>

    <string name="delete_all_messages_in_database_explanation">Are you sure you wish to delete all messages in the database?</string>
    <string name="delete_all_messages_in_server_explanation">Are you sure you wish like to delete all messages in the server?</string>

    <string name="home">Home</string>
    <string name="networks">Networks</string>
    <string name="nodes">Nodes</string>
    <string name="nodes_lc">nodes</string>
    <string name="settings">Settings</string>
    <string name="debug">Debug</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change_node">ChangeNodeActivity</string>
    <string name="title_activity_create_new_network_pop_up">CreateNewNetworkPopUpActivity</string>

</resources>