<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText"
    tools:showIn="navigation_view" >

    <item
        android:id="@+id/HomeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24_black"/>
    <item
        android:id="@+id/manageNetworksAndNodesHeader"
        android:title="Manage Networks And Nodes">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/NetworksFragment"
                    android:icon="@drawable/networks_icon"
                    android:title="@string/networks" />

                <item
                    android:id="@+id/NodesFragment"
                    android:icon="@drawable/nodes_icon"
                    android:title="@string/nodes" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/manageAppBehaviorHeader"
        android:title="Manage App Behavior">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/SettingsFragment"
                    android:icon="@drawable/ic_baseline_settings_24_black"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/DebugFragment"
                    android:icon="@drawable/ic_baseline_bug_report_24_black"
                    android:title="@string/debug" />
            </group>
        </menu>
    </item>


</menu>